[workspace]
resolver = "3"
members = [
    "crates/ane",
]

[workspace.package]
edition = "2024"
authors = ["Eugene Bokhan <eugenebokhan@icloud.com>"]
license = "MIT"

[workspace.dependencies]
ane = { path = "crates/ane" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hf-hub = "0.5"
safetensors = "0.7"
tokenizers = "0.22"
half = "2"
rand = "0.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSObjCRuntime"] }
objc2-io-surface = { version = "0.3", features = ["IOSurfaceRef", "IOSurfaceTypes", "objc2", "objc2-foundation", "objc2-core-foundation", "libc"] }
libc = "0.2"
objc2-core-foundation = "0.3"
