[package]
name = "ane"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[lib]
crate-type = ["lib"]

[[bin]]
name = "gpt2_forward"
path = "src/bin/gpt2_forward/main.rs"

[dependencies]
thiserror.workspace = true
objc2.workspace = true
objc2-foundation.workspace = true
objc2-io-surface.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
hf-hub.workspace = true
safetensors.workspace = true
tokenizers.workspace = true
half.workspace = true
rand.workspace = true
